--- a/src/views/bet/k3/k3.ejs
+++ b/src/views/bet/k3/k3.ejs
@@ -5301,7 +5301,7 @@
     </script>
   </div>
   <div data-v-app=""></div>
-  <div class="van-overlay" style="z-index: 2001; display: none"></div>
+  <!-- <div class="van-overlay" style="z-index: 2001; display: none"></div> -->
   <div role="dialog" tabindex="0" class="van-popup van-popup--center van-toast van-toast--middle van-toast--loading loader_custom_class_header"
     style="z-index: 2001; display: flex">
     <div
