--- a/src/views/bet/k3/k3.ejs
+++ b/src/views/bet/k3/k3.ejs
@@ -4841,42 +4841,42 @@
           </div>
           <div data-v-5c28a69e="" class="K3B__C-betting2-line2">
             <div data-v-5c28a69e="" class="">
-              <div data-v-5c28a69e="" class="">11</div>
+              <div data-v-5c28a69e="" class="" data-value="11">11</div>
             </div>
             <div data-v-5c28a69e="" class="">
-              <div data-v-5c28a69e="" class="">22</div>
+              <div data-v-5c28a69e="" class="" data-value="22">22</div>
             </div>
             <div data-v-5c28a69e="" class="">
-              <div data-v-5c28a69e="" class="">33</div>
+              <div data-v-5c28a69e="" class="" data-value="33">33</div>
             </div>
             <div data-v-5c28a69e="" class="">
-              <div data-v-5c28a69e="" class="">44</div>
+              <div data-v-5c28a69e="" class="" data-value="44">44</div>
             </div>
             <div data-v-5c28a69e="" class="">
-              <div data-v-5c28a69e="" class="">55</div>
+              <div data-v-5c28a69e="" class="" data-value="55">55</div>
             </div>
             <div data-v-5c28a69e="" class="">
-              <div data-v-5c28a69e="" class="">66</div>
+              <div data-v-5c28a69e="" class="" data-value="66">66</div>
             </div>
           </div>
           <div data-v-5c28a69e="" class="K3B__C-betting2-line3">
             <div data-v-5c28a69e="" class="">
-              <div data-v-5c28a69e="" class="">1</div>
+              <div data-v-5c28a69e="" class="" data-value="1">1</div>
             </div>
             <div data-v-5c28a69e="" class="">
-              <div data-v-5c28a69e="" class="">2</div>
+              <div data-v-5c28a69e="" class="" data-value="2">2</div>
             </div>
             <div data-v-5c28a69e="" class="">
-              <div data-v-5c28a69e="" class="">3</div>
+              <div data-v-5c28a69e="" class="" data-value="3">3</div>
             </div>
             <div data-v-5c28a69e="" class="">
-              <div data-v-5c28a69e="" class="">4</div>
+              <div data-v-5c28a69e="" class="" data-value="4">4</div>
             </div>
             <div data-v-5c28a69e="" class="">
-              <div data-v-5c28a69e="" class="">5</div>
+              <div data-v-5c28a69e="" class="" data-value="5">5</div>
             </div>
             <div data-v-5c28a69e="" class="">
-              <div data-v-5c28a69e="" class="">6</div>
+              <div data-v-5c28a69e="" class="" data-value="6">6</div>
             </div>
           </div>
         </div>
