--- a/src/views/bet/k3/k3.ejs
+++ b/src/views/bet/k3/k3.ejs
@@ -4841,22 +4841,22 @@
           </div>
           <div data-v-5c28a69e="" class="K3B__C-betting2-line2">
             <div data-v-5c28a69e="" class="">
-              <div data-v-5c28a69e="" class="" data-value="11">11</div>
+              <div data-v-5c28a69e="" class="" data-value="11#">11</div>
             </div>
             <div data-v-5c28a69e="" class="">
-              <div data-v-5c28a69e="" class="" data-value="22">22</div>
+              <div data-v-5c28a69e="" class="" data-value="22#">22</div>
             </div>
             <div data-v-5c28a69e="" class="">
-              <div data-v-5c28a69e="" class="" data-value="33">33</div>
+              <div data-v-5c28a69e="" class="" data-value="33#">33</div>
             </div>
             <div data-v-5c28a69e="" class="">
-              <div data-v-5c28a69e="" class="" data-value="44">44</div>
+              <div data-v-5c28a69e="" class="" data-value="44#">44</div>
             </div>
             <div data-v-5c28a69e="" class="">
-              <div data-v-5c28a69e="" class="" data-value="55">55</div>
+              <div data-v-5c28a69e="" class="" data-value="55#">55</div>
             </div>
             <div data-v-5c28a69e="" class="">
-              <div data-v-5c28a69e="" class="" data-value="66">66</div>
+              <div data-v-5c28a69e="" class="" data-value="66#">66</div>
             </div>
           </div>
           <div data-v-5c28a69e="" class="K3B__C-betting2-line3">
