--- a/src/views/bet/k3/k3.ejs
+++ b/src/views/bet/k3/k3.ejs
@@ -4997,6 +4997,7 @@
             </div>
           </div>
         </div>
+        <div class="van-overlay" data-v-e49b49d6="" style="z-index: 2002; display: none;"></div>
         <div id="betting_popup" role="dialog" tabindex="0" class="van-popup van-popup--round van-popup--bottom"
           data-v-5f002ad4="" style="
               z-index: 2007;
