--- a/src/views/wallet/addMobileNumber.ejs
+++ b/src/views/wallet/addMobileNumber.ejs
@@ -3456,7 +3456,7 @@
           if (mob) {
             const response = await axios({
               method: "POST",
-              url: "/api/webapi/<%= platform.toLowerCase() === 'bkash' ? 'add_user_bkash' : 'add_nagad_mobile' %>",
+              url: "/api/webapi/<%= platform.toLowerCase() === 'bkash' ? 'add_user_bkash' : 'add_user_nagad' %>",
               data: {
                 mobile: mob,
               },
