--- a/src/views/manage/profileMember.ejs
+++ b/src/views/manage/profileMember.ejs
@@ -116,7 +116,7 @@
                                         </strong>
 
                                         <p class="text-muted">
-                                            <span class="tag tag-danger" id="name">No banks added yet</span>
+                                            <span class="tag tag-danger" id="name">No bankssfsdsdfsdfsdfsdf added yet</span>
                                         </p>
                                         <hr>
                                         <strong>
